# jincms-core

./: .env.sample  .gitignore  Cargo.toml  README.md  test.py
.github/workflows/: release.yml
.sqlx/: query-03e3c361bba32438c1af4d19be953f754f63378312bf2197ef7cb6b697f45326.json  query-1ae3ab4ce319f69fad8c37924bfdd4b5a2b5f155e251a7472ac621e8a7029639.json  query-4fb93abe81d7337e25730656602a6feeb6bb974ee86b36f12ef16a4f68e85536.json  query-78788464af7372feb6e792f67eff41caa7ed2431060c131740d6dbc78e88528e.json  query-8eb6bb5dd6821e465fa890a3130a5db7e3c8a49973bc34fd9f0c6b7e8025ed14.json  query-9b8c6fe91d4c3beb89f33369b8c03adba18cd38868852c7ce4e65ab5c6abd8c0.json  query-a8da7679499ac5afedb82195acdc71c9f4eb698a211df9a847a464657bc8a8d0.json  query-b6252662a516755a003cbc877418eb26a1be0e86f02d143f4fd006312f97b0f5.json  query-d1ba6a534949c83ec94ca1338097e03b357365789134495ce452f66b08f4553f.json  query-e7816104b39775db57f4c62e461462fd79fa27e0f878946aaca28d49135ebc45.json  query-ff5006cbe7114e435e3d9a5be6a04356fa2488642fd95cfb085a8011e2053f25.json
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: header.tsx  layout.tsx  page.tsx
frontend/app/_components/: login.tsx  user.ts
frontend/app/_lib/: user.ts
frontend/app/callback/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/[orgid]/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
migrations/: 20230826124943_article.sql  20230826130310_organizatin.sql  20230826131320_user.sql
src/: cms.rs  lib.rs  main.rs  org.rs  user.rs
