[package]
name = "jincms-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = "0.4.27"
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "mysql", "migrate"] }
url = "2.4.1"
