[package]
name = "jincms-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.1"
jsonwebtoken = "9.1.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "migrate"] }
url = "2.4.1"
